src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__numeric__cast_numeric_to_uint64__impl.snap
---
source: src/expr/src/scalar/func/impls/numeric.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: UInt64,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: UInt64,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: Some(
        CastUint64ToNumeric(
            CastUint64ToNumeric(
                None,
            ),
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
